ambassador/tests/005-canary/gold.intermediate.json
{
    "envoy_config": {
        "admin": [
            {
                "_source": "--internal--",
                "admin_port": 8001
            }
        ],
        "clusters": [
            {
                "_referenced_by": [
                    "--internal--",
                    "ambassador.yaml.1"
                ],
                "_service": "127.0.0.1:8877",
                "_source": "ambassador.yaml.1",
                "lb_type": "round_robin",
                "name": "cluster_127_0_0_1_8877",
                "type": "strict_dns",
                "urls": [
                    "tcp://127.0.0.1:8877"
                ]
            },
            {
                "_referenced_by": [
                    "demo1.yaml.1"
                ],
                "_service": "demo1",
                "_source": "demo1.yaml.1",
                "lb_type": "round_robin",
                "name": "cluster_demo1",
                "type": "strict_dns",
                "urls": [
                    "tcp://demo1:80"
                ]
            },
            {
                "_referenced_by": [
                    "demo2.yaml.1"
                ],
                "_service": "demo2",
                "_source": "demo2.yaml.1",
                "lb_type": "round_robin",
                "name": "cluster_demo2",
                "type": "strict_dns",
                "urls": [
                    "tcp://demo2:80"
                ]
            }
        ],
        "filters": [
            {
                "_source": "--internal--",
                "config": {},
                "name": "cors"
            },
            {
                "_source": "--internal--",
                "config": {},
                "name": "router",
                "type": "decoder"
            }
        ],
        "listeners": [
            {
                "_source": "--internal--",
                "require_tls": false,
                "service_port": 80,
                "use_proxy_proto": false,
                "use_remote_address": true,
                "redirect_listener": false
            }
        ],
        "routes": [
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_ready",
                    "GET"
                ],
                "_group_id": "0a42187b7b3d283e0079ddab01825e1c71fad9f6",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_ready",
                "prefix_rewrite": "/ambassador/v0/check_ready",

                "timeout_ms": 10000
            },
            {
                "__saved": [
                    0,
                    6,
                    0,
                    "/demo/",
                    "GET"
                ],
                "_group_id": "16fb9d91fbd83c170f865b77420a902000b27841",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "demo1.yaml.1",
                    "demo2.yaml.1"
                ],
                "_source": "demo1.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_demo1",
                        "weight": 50.0
                    },
                    {
                        "name": "cluster_demo2",
                        "weight": 50
                    }
                ],
                "prefix": "/demo/",
                "prefix_rewrite": "/"
            },
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_alive",
                    "GET"
                ],
                "_group_id": "6151893fbc2f1f730a1bb946b2eefac391f0d2ec",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_alive",
                "prefix_rewrite": "/ambassador/v0/check_alive",

                "timeout_ms": 10000
            },
            {
                "__saved": [
                    0,
                    12,
                    0,
                    "/ambassador/",
                    "GET"
                ],
                "_group_id": "688e9f91e06f33c943c0c6373a5bdd32e647f7c4",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "ambassador.yaml.1"
                ],
                "_source": "ambassador.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/",
                "prefix_rewrite": "/ambassador/"
            },
            {
                "__saved": [
                    0,
                    15,
                    0,
                    "/ambassador/v0/",
                    "GET"
                ],
                "_group_id": "b69eeb747b38f5e5fd3955d044ea7797d67d024f",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/",
                "prefix_rewrite": "/ambassador/v0/",
            "timeout_ms": 10000
            }        ]
    },
    "errors": {},
    "source_map": {
        "--internal--": {
            "--internal--": true
        },
        "ambassador.yaml": {
            "ambassador.yaml.1": true
        },
        "demo1.yaml": {
            "demo1.yaml.1": true
        },
        "demo2.yaml": {
            "demo2.yaml.1": true
        }
    },
    "sources": {
        "--diagnostics--": {
            "_source": "--diagnostics--",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "filename": "--diagnostics--",
            "index": 0,
            "kind": "diagnostics",
            "name": "Ambassador Diagnostics",
            "version": "v0"
        },
        "--internal--": {
            "_source": "--internal--",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "filename": "--internal--",
            "index": 0,
            "kind": "Internal",
            "name": "Ambassador Internals",
            "version": "v0"
        },
        "ambassador.yaml.1": {
            "_source": "ambassador.yaml",
            "filename": "ambassador.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "diag_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: diag_mapping\nprefix: /ambassador/\nrewrite: /ambassador/\nservice: 127.0.0.1:8877\n"
        },
        "demo1.yaml.1": {
            "_source": "demo1.yaml",
            "filename": "demo1.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "demo1_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: demo1_mapping\nprefix: /demo/\nservice: demo1\n"
        },
        "demo2.yaml.1": {
            "_source": "demo2.yaml",
            "filename": "demo2.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "demo2_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: demo2_mapping\nprefix: /demo/\nservice: demo2\nweight: 50\n"
        }
    }
}
